# marlin

./: .gitmodules  WORKSPACE.bazel
bzl/raze/: Cargo.toml  crates.bzl
bzl/raze/cargo/: BUILD.bazel
bzl/raze/remote/: BUILD.array-init-0.1.1.bazel  BUILD.blake2-0.7.1.bazel  BUILD.byte-tools-0.2.0.bazel  BUILD.colored-1.9.3.bazel  BUILD.constant_time_eq-0.1.5.bazel  BUILD.crypto-mac-0.5.2.bazel  BUILD.digest-0.7.6.bazel  BUILD.generic-array-0.9.1.bazel  BUILD.itertools-0.8.2.bazel  BUILD.ndarray-0.13.1.bazel  BUILD.num-derive-0.3.3.bazel  BUILD.num-integer-0.1.43.bazel  BUILD.ocaml-derive-0.19.0.bazel  BUILD.ocaml-sys-0.19.1.bazel  BUILD.syn-1.0.41.bazel  BUILD.synstructure-0.12.4.bazel  BUILD.winapi-0.3.9.bazel
circuits/marlin/: BUILD.bazel
circuits/plonk/: BUILD.bazel  Cargo.toml
dlog/: Cargo.toml
dlog/commitment/: BUILD.bazel  Cargo.toml
dlog/marlin/: BUILD.bazel  Cargo.toml
dlog/plonk/: BUILD.bazel  Cargo.toml
dlog_solver/: BUILD.bazel  Cargo.toml
oracle/: BUILD.bazel  Cargo.toml
pairing/: Cargo.toml
pairing/commitment/: BUILD.bazel  Cargo.toml
pairing/marlin/: BUILD.bazel  Cargo.toml
pairing/plonk/: BUILD.bazel  Cargo.toml
