workspace( name = "marlin" )

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

#############
## WARNING: "The rules are under active development, as such the lastest commit on the main branch should be used."

rust_commitid = "2de6496df08b94e65a38a0fcafae9fff712862e2"

http_archive(
    name = "rules_rust",
    sha256       = "e09656770684ae5f67951c05ad1a2b5561ca220d0bf1bad228712a71af02ce79",
    strip_prefix = "rules_rust-" + rust_commitid,
    urls = [
        # 2021-03-04:
        "https://github.com/bazelbuild/rules_rust/archive/" + rust_commitid + ".tar.gz",
    ],
)
load("@rules_rust//rust:repositories.bzl",
     "rust_repositories", "rust_repository_set")

rust_repositories(version = "1.47.0", rustfmt_version = "1.4.20", edition="2018")

# zexe_commitid = "f317d3e5f7edc7cd3630baf08fe0de459ef9374a"
# zexe_sha256 = "843794aff7822840d7d3976e5ee681b5dd0890f13ce4d734fac8fdc35707c16e"
local_repository( name = "zexe", path = "zexe" )  ## submodule should match zexe_commitid
# http_archive(
#     name         = "zexe",
#     sha256       = zexe_sha256,
#     strip_prefix = "zexe-" + zexe_commitid,
#     urls = [
#         ## dev:
#         "https://github.com/minatools/zexe/archive/" + zexe_commitid + ".tar.gz"
#         ## prod:
#         ## "https://github.com/o1-labs/zexe" ...
#     ],
# )

###########################################################
load("@zexe//bzl/raze:crates.bzl", zexe_fetch_remote_crates = "raze_fetch_remote_crates")
zexe_fetch_remote_crates()

########################################################
load("//bzl/raze:crates.bzl", marlin_fetch_remote_crates = "raze_fetch_remote_crates")
marlin_fetch_remote_crates()

