load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "dlog_solver",
    visibility = ["//visibility:public"],
    crate_type = "lib",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@zexe//algebra",
        "//bzl/raze/cargo:rand",
        "//bzl/raze/cargo:rand_core",
        "//bzl/raze/cargo:num_integer",
    ],
    crate_features = [
        "asm",
        "bn_382",
        "parallel",
        "tweedle",
        "pasta"
    ]
)
