[package]
name = "dlog_solver"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
algebra = { path = "../zexe/algebra", features = [ "asm", "parallel", "bn_382", "tweedle", "pasta" ] }

num-integer = "0.1"
rand = { version = "0.8.3" } # "0.7.3"
rand_core = { version = "0.6.2" }  # "0.5"
