load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "oracle",
    visibility = ["//visibility:public"],
    edition = "2018",
    srcs = glob(["src/**/*.rs"]),
    # aliases = {
    #     "@zexe//ff-fft": "ff_fft",
    # },
    deps = [
        "@zexe//algebra",
        "@zexe//ff-fft",
        "//bzl/raze/cargo:ocaml",
        "//bzl/raze/cargo:rand",
        "//bzl/raze/cargo:rayon",
    ],
    crate_features = [
        "ocaml_types"
    ],
)
