load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "plonk_circuits",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@zexe//algebra",
        "@zexe//algebra-core",
        "@zexe//ff-fft",
        "//oracle",
        "//bzl/raze/cargo:array_init",
        "//bzl/raze/cargo:blake2",
        "//bzl/raze/cargo:num_traits",
        "//bzl/raze/cargo:ocaml",
        "//bzl/raze/cargo:rand_core",
        "//bzl/raze/cargo:rayon",
    ],
    crate_features = [
        "ocaml_types"
    ],
    proc_macro_deps = ["//bzl/raze/cargo:num_derive"]
)
