load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "commitment_dlog",
    visibility = ["//visibility:public"],
    crate_type = "lib",
    srcs = glob(["src/**/*.rs"]),
    # aliases = {
    #     "@zexe//ff-fft": "ff_fft",
    # },
    deps = [
        "@zexe//algebra",
        "@zexe//groupmap",
        "@zexe//ff-fft",

        "//oracle",
        "//dlog_solver",

        "//bzl/raze/cargo:array_init",
        "//bzl/raze/cargo:rand",
        "//bzl/raze/cargo:rand_core",
        "//bzl/raze/cargo:colored",
        "//bzl/raze/cargo:ocaml",
        "//bzl/raze/cargo:rayon",
        "//bzl/raze/cargo:blake2",
        "//bzl/raze/cargo:itertools"
    ],
    crate_features = [
        "asm",
        "bn_382",
        "parallel",
        "ocaml_types",
        "pasta"
    ]
)
