load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "marlin_protocol_dlog",
    visibility = ["//visibility:public"],
    # crate_type = "lib",
    srcs = glob(["src/**/*.rs"]),
    # aliases = {
    #     "@zexe//ff-fft": "ff_fft",
    # },
    deps = [
        "@zexe//algebra",
        "@zexe//ff-fft",

        "//dlog/commitment:commitment_dlog",
        "//circuits/marlin:marlin_circuits",
        "//oracle",

        "//bzl/raze/cargo:rand_core",
        "//bzl/raze/cargo:colored",
        "//bzl/raze/cargo:rand",
        "//bzl/raze/cargo:sprs",
        "//bzl/raze/cargo:rayon",
    ],
    crate_features = [
        "parallel",
        "bn_382",
        "tweedle",
        "pasta",
        "asm"
    ]
)
