load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "plonk_protocol_dlog",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.rs"]),
    # aliases = {
    #     "@zexe//ff-fft": "ff_fft",
    # },
    deps = [
        "@zexe//algebra",
        "@zexe//ff-fft",

        "//dlog/commitment:commitment_dlog",
        "//circuits/plonk:plonk_circuits",
        "//oracle",

        "//bzl/raze/cargo:rand_core",
        "//bzl/raze/cargo:colored",
        "//bzl/raze/cargo:ocaml",
        "//bzl/raze/cargo:rand",
        "//bzl/raze/cargo:sprs",
        "//bzl/raze/cargo:rayon",
        "//bzl/raze/cargo:array_init"
    ],
    crate_features = [
        "parallel",
        "bn_382",
        "tweedle",
        "pasta",
        "asm",
        "ocaml_types"
    ]
)
