load("@rules_rust//rust:rust.bzl", "rust_library")

rust_library(
    name = "plonk_protocol_pairing",
    visibility = ["//visibility:public"],
    edition = "2018",
    srcs = glob(["src/**/*.rs"]),
    # aliases = {"@zexe//ff-fft": "ff_fft"},
    deps = [
        "@zexe//algebra",
        "@zexe//ff-fft",

        "//pairing/commitment:commitment_pairing",
        "//circuits/plonk:plonk_circuits",
        "//oracle",

        "//bzl/raze/cargo:rand",
        "//bzl/raze/cargo:rand_core",
        "//bzl/raze/cargo:colored",
        "//bzl/raze/cargo:sprs",
        "//bzl/raze/cargo:array_init"
    ],
    crate_features = [
        "parallel"
    ]
)
