[package]
name = "plonk_protocol_pairing"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
algebra = { path = "../../zexe/algebra", features = [ "parallel", "bn_382", "tweedle", "asm" ] }
ff-fft = { path = "../../zexe/ff-fft" }

commitment_pairing = { path = "../commitment" }
plonk_circuits = { path = "../../circuits/plonk" }
oracle = { path = "../../oracle" }

colored = "1.9.2"
rand = { version = "0.8.3" } # "0.7.3"
rand_core = { version = "0.6.2" } # "0.5"
sprs = "0.7.1"
array-init = "0.1.1"
